サイドバー追加2

--- a/index.html
+++ b/index.html
@@ -20,10 +20,17 @@
             </ul>
         </nav>
     </header>
-    
-    <main id="main-content">
-        <!-- 非同期でコンテンツをここに読み込む -->
-    </main>
+
+    <div class="content-container"> <!-- 親コンテナを追加 -->
+        <main id="main-content">
+            <!-- メインコンテンツ -->
+        </main>
+
+        <div class="sidebar">
+            <!-- サイドバー -->
+            <p>ここにサイトメニューや目次が入ります。</p>
+        </div>
+    </div>
 
     <footer>
         <!-- フッターの内容 -->
