サイドバー作成

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         </div>
         <nav>
             <ul>
-                <li><a href="app_dev.html">アプリ開発</a></li>
-                <li><a href="about.html">作成者概要</a></li>
-                <li><a href="knowledge.html">ナレッジメモ </a></li>
+                <li><a href="app_dev.html"><img src="image/icon/ノートパソコンのアイコン素材6.png" >アプリ開発</a></li>
+                <li><a href="about.html"><img src="image/icon/ガンジーアイコン1.png">作成者概要</a></li>
+                <li><a href="knowledge.html"><img src="image/icon/本アイコン.png">ナレッジメモ </a></li>
             </ul>
         </nav>
     </header>
@@ -28,7 +28,14 @@
 
         <div class="sidebar">
             <!-- サイドバー -->
-            <p>ここにサイトメニューや目次が入ります。</p>
+            <p>アプリ開発の外注をお考えの方</p>
+            <ul>
+                <li><img src="image/icon/ネットのアイコン.png"> <p>サイト作成</p></li>
+                <li><img src="image/icon/ディスプレイアイコン.png"> <p>アプリ作成</p></li>
+                <li><img src="image/icon/ノートパソコンのアイコン素材6.png"><p>ウェブアプリ作成</p></li>
+                <li><img src="image/icon/人工衛星アイコン4.png"><p>バックエンド構築</p></li>
+                <li><img src="image/icon/家の無料アイコン.png"><p>インフラ構築</p></li>
+            </ul>
         </div>
     </div>
 
