--- a/main_content.html
+++ b/main_content.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="ja">
+    <head>
+        <link rel="stylesheet" href="main_content.css">
+    </head>
 
 <body>
     <main id="main-content">
         <!-- メインコンテンツ -->
-        <p>ここにサイトメニューや目次が入ります。</p>
+        <p>ここにサイトメニューや目次が入ります。
+            aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+            aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+
+        </p>
     </main>
     
 
