--- a/works.html
+++ b/works.html
@@ -15,9 +15,9 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
 -->
 
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
-<title>最新レスポンシブHTMLテンプレート no.002</title>
+<title>施工実績　最新レスポンシブHTMLテンプレート no.002</title>
 <meta name="Keywords" content="レスポンシブ,HTMLテンプレート,ホームページ制作" />
-<meta name="Description" content="最新レスポンシブHTMLテンプレート no.002。このサイトの説明文を入れてください。" />
+<meta name="Description" content="施工実績、最新レスポンシブHTMLテンプレート no.002。このサイトの説明文を入れてください。" />
 
 <link rel="stylesheet" href="css/style.css" />
 
@@ -28,6 +28,7 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
 
 </head>
 <body>
+
 
 <header>
 
@@ -86,49 +87,61 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
 </nav>
 
 </header>
-<div id="index_top">
-  <div id="top_catch">
-  <h2>廃墟のような存在感を</h2>
-  <p>どこか遠く異次元の世界へ繋がっているような、あの独特の存在感。<br>
-私たちが忘れてしまった、遠い過去の記憶の遺産。</p></div>
-  <div class="pick_up effect">
-  <ul>
-  <li class="effect d_02"><a href="#"><span class="balloon">NEW!</span><img src="img/sample_001.jpg" alt="サンプルイメージ">
-  <span class="btn_check"><i class="fas fa-arrow-right"></i>CHECK!</span></a></li>
-  <li class="effect d_04"><a href="#"><img src="img/sample_002.jpg" alt="サンプルイメージ">
-  <span class="btn_check"><i class="fas fa-arrow-right"></i>CHECK!</span></a></li>
-  <li class="effect d_06"><a href="#"><img src="img/sample_003.jpg" alt="サンプルイメージ">
-  <span class="btn_check"><i class="fas fa-arrow-right"></i>CHECK!</span></a></li>
-  </ul>
-  <p class="sc_btm"><a href="#index_02">Scroll</a></p>
-  </div>
+
+<div id="sub_top" class="works">
+Works
 </div>
 
-<div class="content" id="index_02">
-
-<h2 class="effect d_02">お知らせ<br>
-<span>News</span></h2>
-<div class="cont_wrap effect d_04">
-<ul class="ul_news">
-<li><span>2018.07.01</span><a href="#">2018年・夏のイベント情報</a>を追加いたしました。</li>
-<li><span>2018.06.01</span><a href="#">東京都○○区A様の施工事例</a>を追加いたしました。</li>
-<li><span>2018.05.01</span>ホームページをリニューアルいたしました。</li>
+<div class="pankuzu">
+<ul>
+<li><a href="index.html"><i class="fas fa-home"></i>HOME</a></li>
+<li>施工実績</li>
 </ul>
 </div>
 
+<div class="content">
+<h2 class="effect">施工実績<br>
+<span>施工実績のサンプルになります</span></h2>
+<div class="cont_wrap">
 
-<div class="cont_wrap effect">
-<div class="box_att">
-<h2>写真素材について</h2>
-<p>このテンプレートで使用している写真は、<a href="https://www.pakutaso.com/" target="_blank">ぱくたそ</a>の写真素材を利用しています。二次配布物の受領者がこの写真を継続して利用する場合は、ぱくたそ公式サイトからご自身でダウンロードしていただくか、<a href="https://www.pakutaso.com/userpolicy.html" target="_blank">ぱくたそのご利用規約</a>に同意していただく必要があります。同意いただけない場合は写真素材のご利用はできませんのでご注意ください。</p>
-<p>スライダー使用素材：
-<a href="https://www.pakutaso.com/20171107317post-14015.html" target="_blank">廃墟01</a>、
-<a href="https://www.pakutaso.com/20170507144post-11659.html" target="_blank">廃墟02</a>、
-<a href="https://www.pakutaso.com/20170448118post-11318.html" target="_blank">廃墟03</a>
-</p>
-</div><!--/box_att-->
-</div><!--/cont_wrap-->
+<div class="effect d_02">
 
+<ul class="works_list">
+<li><a href="#"><img src="img/sample_001s.jpg" alt="サンプルイメージ" >
+<span>サンプル実績001</span></a></li>
+<li><a href="#"><img src="img/sample_002s.jpg" alt="サンプルイメージ" >
+<span>サンプル実績002</span></a></li>
+<li><a href="#"><img src="img/sample_003s.jpg" alt="サンプルイメージ" >
+<span>サンプル実績003</span></a></li>
+<li><a href="#"><img src="img/sample_001s.jpg" alt="サンプルイメージ" >
+<span>サンプル実績001</span></a></li>
+<li><a href="#"><img src="img/sample_002s.jpg" alt="サンプルイメージ" >
+<span>サンプル実績002</span></a></li>
+<li><a href="#"><img src="img/sample_003s.jpg" alt="サンプルイメージ" >
+<span>サンプル実績003</span></a></li>
+<li><a href="#"><img src="img/sample_001s.jpg" alt="サンプルイメージ" >
+<span>サンプル実績001</span></a></li>
+<li><a href="#"><img src="img/sample_002s.jpg" alt="サンプルイメージ" >
+<span>サンプル実績002</span></a></li>
+<li><a href="#"><img src="img/sample_003s.jpg" alt="サンプルイメージ" >
+<span>サンプル実績003</span></a></li>
+<li><a href="#"><img src="img/sample_001s.jpg" alt="サンプルイメージ" >
+<span>サンプル実績001</span></a></li>
+<li><a href="#"><img src="img/sample_002s.jpg" alt="サンプルイメージ" >
+<span>サンプル実績002</span></a></li>
+<li><a href="#"><img src="img/sample_003s.jpg" alt="サンプルイメージ" >
+<span>サンプル実績003</span></a></li>
+<li><a href="#"><img src="img/sample_001s.jpg" alt="サンプルイメージ" >
+<span>サンプル実績001</span></a></li>
+<li><a href="#"><img src="img/sample_002s.jpg" alt="サンプルイメージ" >
+<span>サンプル実績002</span></a></li>
+<li><a href="#"><img src="img/sample_003s.jpg" alt="サンプルイメージ" >
+<span>サンプル実績003</span></a></li>
+</ul>
+
+</div>
+
+</div>
 </div>
 
 
@@ -155,10 +168,10 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
 
 <div class="to_top"><a href="#"><img src="img/i_top.png" alt="ページトップへ戻る" ></a></div>
 
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="js/jquery.sublimeSlideshow.js"></script>
 <script src="js/jquery.inview.min.js"></script>
-<script src="js/script.js"></script>
+<script src="js/script_sub.js"></script>
 
 </body>
 </html>
