--- a/company.html
+++ b/company.html
@@ -15,9 +15,9 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
 -->
 
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
-<title>最新レスポンシブHTMLテンプレート no.002</title>
+<title>会社概要サンプル　最新レスポンシブHTMLテンプレート no.002</title>
 <meta name="Keywords" content="レスポンシブ,HTMLテンプレート,ホームページ制作" />
-<meta name="Description" content="最新レスポンシブHTMLテンプレート no.002。このサイトの説明文を入れてください。" />
+<meta name="Description" content="会社概要サンプル、最新レスポンシブHTMLテンプレート no.002。このサイトの説明文を入れてください。" />
 
 <link rel="stylesheet" href="css/style.css" />
 
@@ -28,6 +28,7 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
 
 </head>
 <body>
+
 
 <header>
 
@@ -86,49 +87,97 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
 </nav>
 
 </header>
-<div id="index_top">
-  <div id="top_catch">
-  <h2>廃墟のような存在感を</h2>
-  <p>どこか遠く異次元の世界へ繋がっているような、あの独特の存在感。<br>
-私たちが忘れてしまった、遠い過去の記憶の遺産。</p></div>
-  <div class="pick_up effect">
-  <ul>
-  <li class="effect d_02"><a href="#"><span class="balloon">NEW!</span><img src="img/sample_001.jpg" alt="サンプルイメージ">
-  <span class="btn_check"><i class="fas fa-arrow-right"></i>CHECK!</span></a></li>
-  <li class="effect d_04"><a href="#"><img src="img/sample_002.jpg" alt="サンプルイメージ">
-  <span class="btn_check"><i class="fas fa-arrow-right"></i>CHECK!</span></a></li>
-  <li class="effect d_06"><a href="#"><img src="img/sample_003.jpg" alt="サンプルイメージ">
-  <span class="btn_check"><i class="fas fa-arrow-right"></i>CHECK!</span></a></li>
-  </ul>
-  <p class="sc_btm"><a href="#index_02">Scroll</a></p>
-  </div>
+
+<div id="sub_top" class="company">
+Company Profile
 </div>
 
-<div class="content" id="index_02">
-
-<h2 class="effect d_02">お知らせ<br>
-<span>News</span></h2>
-<div class="cont_wrap effect d_04">
-<ul class="ul_news">
-<li><span>2018.07.01</span><a href="#">2018年・夏のイベント情報</a>を追加いたしました。</li>
-<li><span>2018.06.01</span><a href="#">東京都○○区A様の施工事例</a>を追加いたしました。</li>
-<li><span>2018.05.01</span>ホームページをリニューアルいたしました。</li>
+<div class="pankuzu">
+<ul>
+<li><a href="index.html"><i class="fas fa-home"></i>HOME</a></li>
+<li>会社概要</li>
 </ul>
 </div>
 
+<div class="content">
+<h2 class="effect">会社概要<br>
+<span>会社概要のサンプルになります</span></h2>
+<div class="cont_wrap">
 
-<div class="cont_wrap effect">
-<div class="box_att">
-<h2>写真素材について</h2>
-<p>このテンプレートで使用している写真は、<a href="https://www.pakutaso.com/" target="_blank">ぱくたそ</a>の写真素材を利用しています。二次配布物の受領者がこの写真を継続して利用する場合は、ぱくたそ公式サイトからご自身でダウンロードしていただくか、<a href="https://www.pakutaso.com/userpolicy.html" target="_blank">ぱくたそのご利用規約</a>に同意していただく必要があります。同意いただけない場合は写真素材のご利用はできませんのでご注意ください。</p>
-<p>スライダー使用素材：
-<a href="https://www.pakutaso.com/20171107317post-14015.html" target="_blank">廃墟01</a>、
-<a href="https://www.pakutaso.com/20170507144post-11659.html" target="_blank">廃墟02</a>、
-<a href="https://www.pakutaso.com/20170448118post-11318.html" target="_blank">廃墟03</a>
-</p>
-</div><!--/box_att-->
-</div><!--/cont_wrap-->
+<div class="effect">
+<h3>代表あいさつ</h3>
+<img src="img/img_pr.jpg" alt="代表サンプル" class="img_right">
+  <p>代表あいさつのサンプル文言になります。適当な文言に置き換えてお使いください。代表あいさつのサンプル文言になります。適当な文言に置き換えてお使いください。代表あいさつのサンプル文言になります。適当な文言に置き換えてお使いください。代表あいさつのサンプル文言になります。適当な文言に置き換えてお使いください。<br>
+代表あいさつのサンプル文言になります。適当な文言に置き換えてお使いください。代表あいさつのサンプル文言になります。適当な文言に置き換えてお使いください。代表あいさつのサンプル文言になります。適当な文言に置き換えてお使いください。<br>
+代表あいさつのサンプル文言になります。適当な文言に置き換えてお使いください。</p>
+</div>
 
+<div class="effect d_02">
+<h3>会社概要</h3>
+
+<table class="table_01">
+  <tr>
+    <th>商　号</th>
+    <td>星野工務店（サンプル社名）</td>
+  </tr>
+  <tr>
+    <th>設　立</th>
+    <td>２０１８年（平成３０年）１月１日</td>
+  </tr>
+  <tr>
+    <th>本　社</th>
+    <td>〒３８９－０２０３<br />
+東京都見本区サンプル町１２３４－５６７８<br />
+TEL.０１２３－４５６－７８９０</td>
+  </tr>
+  <tr>
+    <th>代表執行役</th>
+    <td>社長 兼 CEO　星野 一郎 （ほしの いちろう）<br>
+専務 CFO　星野 次郎 （ほしの じろう）</td>
+  </tr>
+  <tr>
+    <th>資本金</th>
+    <td>１２，３４５億円（２０１８年３月３１日現在）</td>
+  </tr>
+  <tr>
+    <th>業務内容</th>
+    <td>建設一式工事、土木一式工事、不動産取引</td>
+  </tr>
+  <tr>
+    <th>許認可番号</th>
+    <td>【建設業許可】東京都知事許可 第0000号<br>
+【一級建築士事務所登録】 東京都知事登録 第0-0000号<br>
+【宅地建物取引業免許】 東京都知事（2）第0000号</td>
+  </tr>
+  <tr>
+    <th>主な取引銀行</th>
+    <td>日本星野銀行、東京星野銀行、星野スマイル銀行</td>
+  </tr>
+  <tr>
+    <th>従業員数</th>
+    <td>１，２３４名</td>
+  </tr>
+</table>
+
+</div>
+
+
+<div class="effect">
+
+<a id="access"></a>
+<h3>アクセスマップ</h3>
+
+<div class="g_map_base">
+<div class="g_map">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3239.6567846113244!2d139.80851171642976!3d35.71006268018737!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188ed0d12f9adf%3A0x7d1d4fb31f43f72a!2z5p2x5Lqs44K544Kr44Kk44OE44Oq44O8!5e0!3m2!1sja!2sjp!4v1532558203332" frameborder="0" style="border:0" allowfullscreen></iframe>
+</div>
+</div>
+
+
+</div>
+
+
+</div>
 </div>
 
 
@@ -155,10 +204,10 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
 
 <div class="to_top"><a href="#"><img src="img/i_top.png" alt="ページトップへ戻る" ></a></div>
 
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="js/jquery.sublimeSlideshow.js"></script>
 <script src="js/jquery.inview.min.js"></script>
-<script src="js/script.js"></script>
+<script src="js/script_sub.js"></script>
 
 </body>
 </html>
