--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
 -->
 
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
-<title>最新レスポンシブHTMLテンプレート no.002</title>
+<title>シヴィルドット製作所</title>
 <meta name="Keywords" content="レスポンシブ,HTMLテンプレート,ホームページ制作" />
 <meta name="Description" content="最新レスポンシブHTMLテンプレート no.002。このサイトの説明文を入れてください。" />
 
@@ -32,9 +32,10 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
 <header>
 
 <div class="bg_bl"></div>
-
-    <h1><a href="index.html"><img src="img/logo.png" alt="最新レスポンシブHTMLテンプレート no.002　サンプルロゴ"></a></h1>
-
+<!-- altは画像読み込み失敗時の表示・SEOの検索に影響・何の画像かコードでわかりやすくする意味がある -->
+<div class="rogo">
+    <h1><a href="index.html"><img src="/image/ロゴ3.png" alt="ロゴ"></a></h1>
+</div>
 <a class="menu_btn">
     <span class="top"></span>
     <span class="middle"></span>
@@ -46,13 +47,13 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
 <nav id="g_navi">
     <ul class="navi_base">
     <li><a href="index.html">HOME</a></li>
-      <li><a class="ac_menu">星野工務店について</a>
+      <li><a class="ac_menu">アプリ作成について</a>
       <div class="ac_list">
       <ul>
-      <li><a href="sample.html">汎用ページ（サンプル）</a></li>
-      <li><a href="#">コンセプト</a></li>
-      <li><a href="#">星野のこだわり</a></li>
-      <li><a href="#">家づくりの流れ</a></li>
+      <li><a href="sample.html">モバイルアプリ</a></li>
+      <li><a href="#">webアプリ</a></li>
+      <li><a href="#">webページ</a></li>
+      <li><a href="#">インフラ</a></li>
       </ul>
       </div>
       </li>   
