--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
 <div class="bg_bl"></div>
 <!-- altは画像読み込み失敗時の表示・SEOの検索に影響・何の画像かコードでわかりやすくする意味がある -->
 <div class="rogo">
-    <h1><a href="index.html"><img src="/image/ロゴ3.png" alt="ロゴ"></a></h1>
+    <h1><a href="index.html"><img src="image/ロゴ3.png" alt="ロゴ"></a></h1>
 </div>
 <a class="menu_btn">
     <span class="top"></span>
