--- a/index.html
+++ b/index.html
@@ -61,17 +61,10 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
       <div class="ac_list">
       <ul>
       <li><a href="works.html">施工実績（サンプル）</a></li>
-      <li><a href="#">北海道・東北</a></li>
-      <li><a href="#">関東・甲信越</a></li>
-      <li><a href="#">中部・近畿・東海</a></li>
-      <li><a href="#">中国・四国</a></li>
-      <li><a href="#">九州・沖縄</a></li>
-      <li><a href="#">離島・その他国内</a></li>
-      <li><a href="#">海外（アメリカ・ヨーロッパ）</a></li>
       </ul>
       </div>
       </li>  
-      <li><a href="faq.html">FAQ（サンプル）</a></li>
+      <li><a href="faq.html">FAQ</a></li>
       <li><a href="#">イベント情報</a></li>
       <li><a class="ac_menu">会社案内</a>
       <div class="ac_list">
@@ -89,9 +82,9 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
 </header>
 <div id="index_top">
   <div id="top_catch">
-  <h2>廃墟のような存在感を</h2>
-  <p>どこか遠く異次元の世界へ繋がっているような、あの独特の存在感。<br>
-私たちが忘れてしまった、遠い過去の記憶の遺産。</p></div>
+  <h2>気軽な開発を</h2>
+  <p>とりあえず作ってみる。話はそれからだ</p>
+  </p></div>
   <div class="pick_up effect">
   <ul>
   <li class="effect d_02"><a href="#"><span class="balloon">NEW!</span><img src="img/sample_001.jpg" alt="サンプルイメージ">
