--- a/sample copy.html
+++ b/sample copy.html
@@ -20,13 +20,11 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
 <meta name="Description" content="汎用ページ、最新レスポンシブHTMLテンプレート no.002。このサイトの説明文を入れてください。" />
 
 <link rel="stylesheet" href="css/style.css" />
-<link rel="stylesheet" href="css/sample.css" />
 
 <link href="https://fonts.googleapis.com/earlyaccess/sawarabimincho.css" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet"> 
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
 <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-
 
 </head>
 <body>
@@ -108,7 +106,7 @@ Sample page
 <div class="cont_wrap">
 
 <div class="effect d_02">
-<img src="img/準備中イラスト.png" alt="サンプルイメージ" class="img_left">
+<img src="img/sample_001s.jpg" alt="サンプルイメージ" class="img_left">
 <p>汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。<br>
 汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。</p>
 <p>汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。<br>
