モバイル版の画像が崩れるかテスト

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
   </p></div>
   <div class="pick_up effect">
   <ul>
-  <li class="effect d_02"><a href="#"><span class="balloon">NEW!</span><img src="img/sample_001.jpg" alt="サンプルイメージ">
+  <li class="effect d_02"><a href="#"><span class="balloon">NEW!</span><img src="image/モバイルアプリアイコン.webp" alt="サンプルイメージ">
   <span class="btn_check"><i class="fas fa-arrow-right"></i>CHECK!</span></a></li>
   <li class="effect d_04"><a href="#"><img src="img/sample_002.jpg" alt="サンプルイメージ">
   <span class="btn_check"><i class="fas fa-arrow-right"></i>CHECK!</span></a></li>
