--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
   </p></div>
   <div class="pick_up effect">
   <ul>
-  <li class="effect d_02"><a href="#"><span class="balloon">NEW!</span><img src="image/モバイルアプリアイコン.webp" alt="サンプルイメージ">
-  <span class="btn_check"><i class="fas fa-arrow-right"></i>CHECK!</span></a></li>
-  <li class="effect d_04"><a href="#"><img src="img/sample_002.jpg" alt="サンプルイメージ">
-  <span class="btn_check"><i class="fas fa-arrow-right"></i>CHECK!</span></a></li>
-  <li class="effect d_06"><a href="#"><img src="img/sample_003.jpg" alt="サンプルイメージ">
-  <span class="btn_check"><i class="fas fa-arrow-right"></i>CHECK!</span></a></li>
+  <li class="effect d_02"><a href="#"><span class="balloon">NEW!</span><img src="image/モバイルアプリアイコン.jpg" alt="サンプルイメージ">
+  <span class="btn_check"><i class="fas fa-arrow-right"></i>モバイルアプリ！</span></a></li>
+  <li class="effect d_04"><a href="#"><img src="image/webアプリアイコン.jpg" alt="サンプルイメージ">
+  <span class="btn_check"><i class="fas fa-arrow-right"></i>webアプリ！</span></a></li>
+  <li class="effect d_06"><a href="#"><img src="image/インフラ.jpg" alt="サンプルイメージ">
+  <span class="btn_check"><i class="fas fa-arrow-right"></i>インフラ！</span></a></li>
   </ul>
   <p class="sc_btm"><a href="#index_02">Scroll</a></p>
   </div>
