ヘッダー更新

--- a/contact.html
+++ b/contact.html
@@ -31,63 +31,59 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
 <body>
 
 
+<!----------------------------------- ヘッダーは共通部品 ---------------------------------------------->
 <header>
 
-<div class="bg_bl"></div>
-
-    <h1><a href="index.html"><img src="img/logo.png" alt="最新レスポンシブHTMLテンプレート no.002　サンプルロゴ"></a></h1>
-
-<a class="menu_btn">
-    <span class="top"></span>
-    <span class="middle"></span>
-    <span class="bottom"></span>
-</a>
-
-<div class="h_btn"><a href="contact.html"><i class="fas fa-envelope"></i><span>お問合わせ</span></a></div>
-<div class="h_tel font_mincho"><a href="tel:"><i class="fas fa-phone"></i><span>0123-<strong>456-7890</strong></span></a></div>
-<nav id="g_navi">
-    <ul class="navi_base">
-    <li><a href="index.html">HOME</a></li>
-      <li><a class="ac_menu">星野工務店について</a>
-      <div class="ac_list">
-      <ul>
-      <li><a href="sample.html">汎用ページ（サンプル）</a></li>
-      <li><a href="#">コンセプト</a></li>
-      <li><a href="#">星野のこだわり</a></li>
-      <li><a href="#">家づくりの流れ</a></li>
+  <div class="bg_bl"></div>
+  <!-- altは画像読み込み失敗時の表示・SEOの検索に影響・何の画像かコードでわかりやすくする意味がある -->
+  <div class="rogo">
+      <h1><a href="index.html"><img src="image/ロゴ3.png" alt="ロゴ"></a></h1>
+  </div>
+  <a class="menu_btn">
+      <span class="top"></span>
+      <span class="middle"></span>
+      <span class="bottom"></span>
+  </a>
+  
+  <div class="h_btn"><a href="contact.html"><i class="fas fa-envelope"></i><span>お問合わせ</span></a></div>
+  <div class="h_tel font_mincho"><a href="tel:"><i class="fas fa-phone"></i><span>080-<strong>6842-6878</strong></span></a></div>
+  <nav id="g_navi">
+      <ul class="navi_base">
+      <li><a href="index.html">HOME</a></li>
+        <li><a class="ac_menu">アプリ作成について</a>
+        <div class="ac_list">
+        <ul>
+        <li><a href="sample.html">モバイルアプリ</a></li>
+        <li><a href="#">webアプリ</a></li>
+        <li><a href="#">webページ</a></li>
+        <li><a href="#">インフラ</a></li>
+        </ul>
+        </div>
+        </li>   
+        <li><a class="ac_menu">作成例</a>
+        <div class="ac_list">
+        <ul>
+        <li><a href="works.html">マッチングアプリ（モバイル）</a></li>
+        <li><a href="works.html">プロジェクト管理（webアプリ）</a></li>
+        <li><a href="works.html">掲示板（webアプリ）</a></li>
+        <li><a href="works.html">LINEボット（モバイル）</a></li>
+        <li><a href="works.html">マッチングアプリ（モバイル）</a></li>
+        </ul>
+        </div>
+        </li>  
+        <li><a href="faq.html">FAQ</a></li>
+        <li><a href="company.html" class="ac_menu">会社案内</a>
+        <div class="ac_list">
+        <ul>
+        </ul>
+        </div>
+        </li>
       </ul>
-      </div>
-      </li>   
-      <li><a class="ac_menu">施工実績</a>
-      <div class="ac_list">
-      <ul>
-      <li><a href="works.html">施工実績（サンプル）</a></li>
-      <li><a href="#">北海道・東北</a></li>
-      <li><a href="#">関東・甲信越</a></li>
-      <li><a href="#">中部・近畿・東海</a></li>
-      <li><a href="#">中国・四国</a></li>
-      <li><a href="#">九州・沖縄</a></li>
-      <li><a href="#">離島・その他国内</a></li>
-      <li><a href="#">海外（アメリカ・ヨーロッパ）</a></li>
-      </ul>
-      </div>
-      </li>  
-      <li><a href="faq.html">FAQ（サンプル）</a></li>
-      <li><a href="#">イベント情報</a></li>
-      <li><a class="ac_menu">会社案内</a>
-      <div class="ac_list">
-      <ul>
-      <li><a href="company.html">会社概要（サンプル）</a></li>
-      <li><a href="#">企業理念</a></li>
-      <li><a href="#">採用情報</a></li>
-      <li><a href="#">アクセス</a></li>
-      </ul>
-      </div>
-      </li>
-    </ul>
-</nav>
-
-</header>
+  </nav>
+  
+  </header>
+  
+  <!----------------------------------- ここまでヘッダーは共通部品 ---------------------------------------------->
 
 <div id="sub_top" class="contact">
 Contact us
