--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
 
 </head>
 <body>
-
+<!----------------------------------- ヘッダーは共通部品 ---------------------------------------------->
 <header>
 
 <div class="bg_bl"></div>
@@ -43,7 +43,7 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
 </a>
 
 <div class="h_btn"><a href="contact.html"><i class="fas fa-envelope"></i><span>お問合わせ</span></a></div>
-<div class="h_tel font_mincho"><a href="tel:"><i class="fas fa-phone"></i><span>0123-<strong>456-7890</strong></span></a></div>
+<div class="h_tel font_mincho"><a href="tel:"><i class="fas fa-phone"></i><span>080-<strong>6842-6878</strong></span></a></div>
 <nav id="g_navi">
     <ul class="navi_base">
     <li><a href="index.html">HOME</a></li>
@@ -57,22 +57,21 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
       </ul>
       </div>
       </li>   
-      <li><a class="ac_menu">施工実績</a>
+      <li><a class="ac_menu">作成例</a>
       <div class="ac_list">
       <ul>
-      <li><a href="works.html">施工実績（サンプル）</a></li>
+      <li><a href="works.html">マッチングアプリ（モバイル）</a></li>
+      <li><a href="works.html">プロジェクト管理（webアプリ）</a></li>
+      <li><a href="works.html">掲示板（webアプリ）</a></li>
+      <li><a href="works.html">LINEボット（モバイル）</a></li>
+      <li><a href="works.html">マッチングアプリ（モバイル）</a></li>
       </ul>
       </div>
       </li>  
       <li><a href="faq.html">FAQ</a></li>
-      <li><a href="#">イベント情報</a></li>
-      <li><a class="ac_menu">会社案内</a>
+      <li><a href="company.html" class="ac_menu">会社案内</a>
       <div class="ac_list">
       <ul>
-      <li><a href="company.html">会社概要（サンプル）</a></li>
-      <li><a href="#">企業理念</a></li>
-      <li><a href="#">採用情報</a></li>
-      <li><a href="#">アクセス</a></li>
       </ul>
       </div>
       </li>
@@ -80,14 +79,19 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
 </nav>
 
 </header>
+
+<!----------------------------------- ここまでヘッダーは共通部品 ---------------------------------------------->
+
 <div id="index_top">
   <div id="top_catch">
   <h2>気軽な開発を</h2>
-  <p>とりあえず作ってみる。話はそれからだ</p>
+  <p>とりあえず作ってみる。</p>
   </p></div>
   <div class="pick_up effect">
   <ul>
-  <li class="effect d_02"><a href="#"><span class="balloon">NEW!</span><img src="image/モバイルアプリアイコン.jpg" alt="サンプルイメージ">
+  <li class="effect d_02"><a href="sample.html">
+    <!-- <span class="balloon">NEW!</span> -->
+    <img src="image/モバイルアプリアイコン.jpg" alt="サンプルイメージ">
   <span class="btn_check"><i class="fas fa-arrow-right"></i>モバイルアプリ！</span></a></li>
   <li class="effect d_04"><a href="#"><img src="image/webアプリアイコン.jpg" alt="サンプルイメージ">
   <span class="btn_check"><i class="fas fa-arrow-right"></i>webアプリ！</span></a></li>
