サンプルページ、会社概要更新

--- a/sample_2.html
+++ b/sample_2.html
@@ -15,16 +15,18 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
 -->
 
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
-<title>会社概要サンプル　最新レスポンシブHTMLテンプレート no.002</title>
+<title>汎用ページサンプル　最新レスポンシブHTMLテンプレート no.002</title>
 <meta name="Keywords" content="レスポンシブ,HTMLテンプレート,ホームページ制作" />
-<meta name="Description" content="会社概要サンプル、最新レスポンシブHTMLテンプレート no.002。このサイトの説明文を入れてください。" />
+<meta name="Description" content="汎用ページ、最新レスポンシブHTMLテンプレート no.002。このサイトの説明文を入れてください。" />
 
 <link rel="stylesheet" href="css/style.css" />
+<link rel="stylesheet" href="css/sample.css" />
 
 <link href="https://fonts.googleapis.com/earlyaccess/sawarabimincho.css" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet"> 
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
 <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+
 
 </head>
 <body>
@@ -84,78 +86,63 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
   
   <!----------------------------------- ここまでヘッダーは共通部品 ---------------------------------------------->
 
-<div id="sub_top" class="company">
-Company Profile
+
+<div id="sub_top" class="sample">
+Sample page
 </div>
 
 <div class="pankuzu">
 <ul>
 <li><a href="index.html"><i class="fas fa-home"></i>HOME</a></li>
-<li>会社概要</li>
+<li>汎用ページ</li>
 </ul>
 </div>
 
 <div class="content">
-<h2 class="effect">会社概要<br>
-<span>会社概要のサンプルになります</span></h2>
+<h2 class="effect">汎用ページ<br>
+<span>汎用ページのサンプルです</span></h2>
 <div class="cont_wrap">
 
-<div class="effect">
-<h3>代表あいさつ</h3>
-<img src="img/準備中イラスト.png" alt="代表サンプル" class="img_right">
-  <p>代表あいさつのサンプル文言になります。適当な文言に置き換えてお使いください。代表あいさつのサンプル文言になります。適当な文言に置き換えてお使いください。代表あいさつのサンプル文言になります。適当な文言に置き換えてお使いください。代表あいさつのサンプル文言になります。適当な文言に置き換えてお使いください。<br>
-代表あいさつのサンプル文言になります。適当な文言に置き換えてお使いください。代表あいさつのサンプル文言になります。適当な文言に置き換えてお使いください。代表あいさつのサンプル文言になります。適当な文言に置き換えてお使いください。<br>
-代表あいさつのサンプル文言になります。適当な文言に置き換えてお使いください。</p>
+<div class="effect d_02">
+<img src="img/準備中イラスト.png" alt="サンプルイメージ" class="img_left">
+<p>汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。<br>
+汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。</p>
+<p>汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。<br>
+  汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。</p>
+
 </div>
 
-<div class="effect d_02">
-<h3>会社概要</h3>
 
-<table class="table_01">
-  <tr>
-    <th>社　名</th>
-    <td>シヴィルドット製作所</td>
-  </tr>
-  <tr>
-    <th>設　立</th>
-    <td>2024年　4月　7日</td>
-  </tr>
-  <tr>
-    <th>本　社</th>
-    <td>〒３８９－０２０３<br />
-千葉寄りの東京<br />
-TEL.080-6842-6878</td>
-  </tr>
-  <tr>
-    <th>本人　氏名</th>
-    <td>フカセ</td>
-  </tr>
-  <tr>
-    <th>使用言語</th>
-    <td>HTML,CSS,javascript,python,Flutter(Dart),java</td>
-  </tr>
-  <tr>
-    <th>使用フレームワーク</th>
-    <td>django,React,BootStrap</td>
-  </tr>
+<div class="effect">
+<h3>確認用サンプル大見出しです</h3>
 
+<img src="img/準備中イラスト.png" alt="サンプルイメージ" class="img_right">
+<p>汎用ページ、確認用のサンプル文言になります。 汎用ページ、確認用のサンプル文言になります。 汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。<br>
+汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。</p>
+<h4>確認用サンプル小見出しです</h4>
+<p>汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。<br>
+  汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。</p>
+<p class="check">※汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。</p>
+</div>
+
+<div class="effect">
+<h4>汎用テーブルのサンプル</h4>
+<table class="table_02">
+  <tr>
+    <th>サンプル商品A</th>
+    <td>サンプル商品価格<span class="price">19,800</span>円</td>
+  </tr>
+  <tr>
+    <th>サンプル商品B</th>
+    <td>サンプル商品価格<span class="price">29,800</span>円</td>
+  </tr>
+  <tr>
+    <th>サンプル商品C</th>
+    <td>サンプル商品価格<span class="price">39,800</span>円</td>
   </tr>
 </table>
 
-</div>
-
-
-<div class="effect">
-
-<a id="access"></a>
-<h3>近場の名所</h3>
-
-<div class="g_map_base">
-<div class="g_map">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3239.6567846113244!2d139.80851171642976!3d35.71006268018737!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188ed0d12f9adf%3A0x7d1d4fb31f43f72a!2z5p2x5Lqs44K544Kr44Kk44OE44Oq44O8!5e0!3m2!1sja!2sjp!4v1532558203332" frameborder="0" style="border:0" allowfullscreen></iframe>
-</div>
-</div>
-
+<div class="btn_001"><a href="contact.html"><i class="fas fa-shopping-cart"></i>ご注文・お問い合わせはコチラ</a></div>
 
 </div>
 
@@ -184,6 +171,7 @@ TEL.080-6842-6878</td>
 <!--　/削除禁止【ＰＲ枠】ここまで　--> 
   </div>
 </footer>
+
 
 <div class="to_top"><a href="#"><img src="img/i_top.png" alt="ページトップへ戻る" ></a></div>
 
