--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
   <li class="effect d_02"><a href="sample.html">
     <!-- <span class="balloon">NEW!</span> -->
     <img src="image/モバイルアプリアイコン.jpg" alt="サンプルイメージ">
-  <span class="btn_check"><i class="fas fa-arrow-right"></i>モバイルアプリ！</span></a></li>
+  <span class="btn_check"><i class="fas fa-arrow-right"></i>モバイル</span></a></li>
   <li class="effect d_04"><a href="#"><img src="image/webアプリアイコン.jpg" alt="サンプルイメージ">
-  <span class="btn_check"><i class="fas fa-arrow-right"></i>webアプリ！</span></a></li>
+  <span class="btn_check"><i class="fas fa-arrow-right"></i>web</span></a></li>
   <li class="effect d_06"><a href="#"><img src="image/インフラ.jpg" alt="サンプルイメージ">
-  <span class="btn_check"><i class="fas fa-arrow-right"></i>インフラ！</span></a></li>
+  <span class="btn_check"><i class="fas fa-arrow-right"></i>インフラ</span></a></li>
   </ul>
   <p class="sc_btm"><a href="#index_02">Scroll</a></p>
   </div>
@@ -108,9 +108,7 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
 <span>News</span></h2>
 <div class="cont_wrap effect d_04">
 <ul class="ul_news">
-<li><span>2018.07.01</span><a href="#">2018年・夏のイベント情報</a>を追加いたしました。</li>
-<li><span>2018.06.01</span><a href="#">東京都○○区A様の施工事例</a>を追加いたしました。</li>
-<li><span>2018.05.01</span>ホームページをリニューアルいたしました。</li>
+<li><span>2024.04.07</span>ホームページを作成しました。</li>
 </ul>
 </div>
 
