--- a/sample.html
+++ b/sample.html
@@ -94,19 +94,22 @@ Sample page
 <div class="pankuzu">
 <ul>
 <li><a href="index.html"><i class="fas fa-home"></i>HOME</a></li>
-<li>汎用ページ</li>
+<li>webアプリ</li>
 </ul>
 </div>
 
 <div class="content">
-<h2 class="effect">汎用ページ<br>
-<span>汎用ページのサンプルです</span></h2>
+<h2 class="effect">webアプリ<br>
+<span>webアプリの作成手順について
+</span></h2>
 <div class="cont_wrap">
 
 <div class="effect d_02">
 <img src="img/準備中イラスト.png" alt="サンプルイメージ" class="img_left">
-<p>汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。<br>
-汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。</p>
+<h5></h5>
+<p>新しい小見出しの内容をここに追加してください。</p>
+まずは、webアプリの作成手順についてご説明いたします。
+<p></p>
 <p>汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。<br>
   汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。</p>
 
@@ -116,7 +119,7 @@ Sample page
 <div class="effect">
 <h3>確認用サンプル大見出しです</h3>
 
-<img src="img/sample_002s.jpg" alt="サンプルイメージ" class="img_right">
+<img src="img/準備中イラスト.png" alt="サンプルイメージ" class="img_right">
 <p>汎用ページ、確認用のサンプル文言になります。 汎用ページ、確認用のサンプル文言になります。 汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。<br>
 汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。</p>
 <h4>確認用サンプル小見出しです</h4>
